generated-tests/tests/snapshots/tsx/test_generated_rest_type.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
type RestTuple = [string, ...number[]];

AST:
(program
  (type_alias_declaration
    (type_identifier)
    (tuple_type
      (predefined_type)
      (rest_type
        (array_type
          (predefined_type)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "RestTuple",
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 15,
            },
            definition_type: TypeDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
