generated-tests/tests/snapshots/tsx/test_generated_satisfies_expression.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
value28 satisfies string

AST:
(program
  (expression_statement
    (satisfies_expression
      (identifier value28)
      (predefined_type)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "value28",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 8,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
